[gd_scene load_steps=9 format=3 uid="uid://ci6uy4jghak2i"]

[ext_resource type="Script" path="res://Maps/SlidingDoor.gd" id="1_70yfs"]
[ext_resource type="Texture2D" uid="uid://41faj8pfp84a" path="res://Maps/T_Orange_D.png" id="1_dagta"]
[ext_resource type="AudioStream" uid="uid://uyjf7rfhpepa" path="res://Maps/Audio/SlidingDoorOpen.ogg" id="2_bmnfj"]
[ext_resource type="AudioStream" uid="uid://b2086xxmhhswm" path="res://Maps/Audio/SlidingDoorFinish.ogg" id="3_egfpd"]

[sub_resource type="BoxMesh" id="BoxMesh_mve0h"]
size = Vector3(0.1, 3.5, 2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u77tx"]
albedo_color = Color(1, 0.850903, 0, 1)
albedo_texture = ExtResource("1_dagta")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8lp7g"]
data = PackedVector3Array(-0.05, 1.75, 1.25, 0.05, 1.75, 1.25, -0.05, -1.75, 1.25, 0.05, 1.75, 1.25, 0.05, -1.75, 1.25, -0.05, -1.75, 1.25, 0.05, 1.75, -1.25, -0.05, 1.75, -1.25, 0.05, -1.75, -1.25, -0.05, 1.75, -1.25, -0.05, -1.75, -1.25, 0.05, -1.75, -1.25, 0.05, 1.75, 1.25, 0.05, 1.75, -1.25, 0.05, -1.75, 1.25, 0.05, 1.75, -1.25, 0.05, -1.75, -1.25, 0.05, -1.75, 1.25, -0.05, 1.75, -1.25, -0.05, 1.75, 1.25, -0.05, -1.75, -1.25, -0.05, 1.75, 1.25, -0.05, -1.75, 1.25, -0.05, -1.75, -1.25, 0.05, 1.75, 1.25, -0.05, 1.75, 1.25, 0.05, 1.75, -1.25, -0.05, 1.75, 1.25, -0.05, 1.75, -1.25, 0.05, 1.75, -1.25, -0.05, -1.75, 1.25, 0.05, -1.75, 1.25, -0.05, -1.75, -1.25, 0.05, -1.75, 1.25, 0.05, -1.75, -1.25, -0.05, -1.75, -1.25)

[sub_resource type="SphereShape3D" id="SphereShape3D_eb2os"]
radius = 2.5

[node name="Door" type="Node3D"]
script = ExtResource("1_70yfs")

[node name="Door" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_mve0h")
surface_material_override/0 = SubResource("StandardMaterial3D_u77tx")
metadata/_edit_group_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="Door"]
collision_mask = 34

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_8lp7g")

[node name="UseArea" type="Area3D" parent="."]
collision_layer = 64
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="UseArea"]
shape = SubResource("SphereShape3D_eb2os")

[node name="MoveSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_bmnfj")
volume_db = 10.0
unit_size = 1.0
max_db = 2.0
pitch_scale = 2.0
max_distance = 10.0
bus = &"SFX"

[node name="FinishSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_egfpd")
volume_db = 10.0
unit_size = 1.0
max_db = 2.0
pitch_scale = 0.7
max_distance = 15.0
bus = &"SFX"

[node name="CloseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CloseTimer" to="." method="activate"]
